--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,16 @@
 
     <string name="action_map">Map Location</string>
     <string name="action_share">Share</string>
+
+    <string name="pref_units_label">Temperature Units</string>
+    <string name="pref_units_key">units</string>
+
+    <string name="pref_units_label_metric">Metric</string>
+    <string name="pref_units_metric">metric</string>
+
+
+    <string name="pref_units_label_imperial">Imperial</string>
+    <string name="pref_units_imperial">imperial</string>
+
+
 </resources>
